force-app/main/default/objects/Howden_Task__c/Howden_Task__c.object-meta.xml
<CustomObject>
    <description>תכנון עבודה פנימי</description>
    <label>בקשה פנימית</label>
    <nameField>
        <displayFormat>HT-{0000}</displayFormat>
        <label>שם Howden Task</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>בקשות פנימיות</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>