force-app/main/default/objects/Howden_Task__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>חשבון לתיוק</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>בקשות פנימיות</relationshipLabel>
    <relationshipName>HoedenTasks</relationshipName>
    <type>Lookup</type>
</CustomField>