force-app/main/default/objects/Howden_Task__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>מחלקה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Claims</fullName>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
            <value>
                <fullName>Cyber</fullName>
            </value>
            <value>
                <fullName>Howden Indutries</fullName>
            </value>
            <value>
                <fullName>Howden Israelit</fullName>
            </value>
            <value>
                <fullName>Howden Law Firms</fullName>
            </value>
            <value>
                <fullName>Howden Medical</fullName>
            </value>
            <value>
                <fullName>Howden Personal Lines</fullName>
            </value>
            <value>
                <fullName>Howden Prime</fullName>
            </value>
            <value>
                <fullName>Howden Ri + Howden 360</fullName>
            </value>
            <value>
                <fullName>Howden Shefi</fullName>
            </value>
            <value>
                <fullName>Howden Surety</fullName>
            </value>
            <value>
                <fullName>Howden Technologies</fullName>
            </value>
            <value>
                <fullName>Howden Travel and PA</fullName>
            </value>
            <value>
                <fullName>Howden VC</fullName>
            </value>
            <value>
                <fullName>Marketing Communication</fullName>
            </value>
            <value>
                <fullName>Telemitting</fullName>
            </value>
            <value>
                <fullName>בקרה פיננסית</fullName>
            </value>
            <value>
                <fullName>הנהלת חשבונות</fullName>
            </value>
            <value>
                <fullName>כלל ארגוני</fullName>
                <default>true</default>
                <label>כלל ארגוני</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>