force-app/main/default/objects/Howden_Task__c/fields/Detailes__c.field-meta.xml
<CustomField>
    <fullName>Detailes__c</fullName>
    <label>פירוט הבקשה</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>