force-app/main/default/objects/Howden_Task__c/fields/Field2__c.field-meta.xml
<CustomField>
    <fullName>Field2__c</fullName>
    <label>תשומות ניתוח</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>