force-app/main/default/objects/Howden_Task__c/fields/Field3__c.field-meta.xml
<CustomField>
    <fullName>Field3__c</fullName>
    <label>תשומות יישום</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>