force-app/main/default/objects/Howden_Task__c/fields/Investment__c.field-meta.xml
<CustomField>
    <fullName>Investment__c</fullName>
    <label>היקף השקעה מוערך</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>שעות בודדות</fullName>
            </value>
            <value>
                <fullName>ימים ספורים</fullName>
            </value>
            <value>
                <fullName>נדרשת השקעה להערכת משמעויות</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>