force-app/main/default/objects/Howden_Task__c/fields/Reject_reason__c.field-meta.xml
<CustomField>
    <fullName>Reject_reason__c</fullName>
    <label>סיבת דחיה</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>לא מאושר תקציבית</fullName>
            </value>
            <value>
                <fullName>לא תואם התנהגות מערכת</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>