force-app/main/default/objects/Howden_Task__c/fields/Request_date__c.field-meta.xml
<CustomField>
    <fullName>Request_date__c</fullName>
    <label>תאריך פתיחה</label>
    <type>Date</type>
</CustomField>