force-app/main/default/objects/Howden_Task__c/fields/Request_Owner__c.field-meta.xml
<CustomField>
    <fullName>Request_Owner__c</fullName>
    <label>גורם מטפל</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>סיגל</fullName>
            </value>
            <value>
                <fullName>בתאל</fullName>
            </value>
            <value>
                <fullName>Novidea</fullName>
            </value>
            <value>
                <fullName>נתן דולב</fullName>
            </value>
            <value>
                <fullName>אוריון הכהן</fullName>
            </value>
            <value>
                <fullName>UBTECH</fullName>
            </value>
            <value>
                <fullName>SYSTEM</fullName>
            </value>
            <value>
                <fullName>HELPDESK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>