force-app/main/default/objects/Howden_Task__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>המבקש</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Howden_tasks</relationshipName>
    <type>Lookup</type>
</CustomField>