force-app/main/default/objects/Howden_Task__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>סטטוס הטיפול</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>חדש</fullName>
                <default>true</default>
                <label>חדש</label>
            </value>
            <value>
                <fullName>בטיפול</fullName>
            </value>
            <value>
                <fullName>סגור</fullName>
            </value>
            <value>
                <fullName>נדחה</fullName>
            </value>
            <value>
                <fullName>לבחינה עתידית</fullName>
            </value>
            <value>
                <fullName>ממתין לישיבת תעדוף</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>