force-app/main/default/objects/Howden_Task__c/fields/Status_details__c.field-meta.xml
<CustomField>
    <fullName>Status_details__c</fullName>
    <label>הרחבת מידע לסטטוס</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>