force-app/main/default/objects/Howden_Task__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>נושא</label>
    <type>TextArea</type>
</CustomField>