force-app/main/default/objects/Howden_Task__c/fields/value__c.field-meta.xml
<CustomField>
    <fullName>value__c</fullName>
    <label>תועלת צפויה</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>