force-app/main/default/objects/Howden_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Subject__c</columns>
    <columns>Detailes__c</columns>
    <columns>Field1__c</columns>
    <columns>Investment__c</columns>
    <columns>value__c</columns>
    <columns>Department__c</columns>
    <columns>Requested_By__c</columns>
    <columns>Status__c</columns>
    <columns>Request_date__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>הכול</label>
    <language>iw</language>
</ListView>