force-app/main/default/objects/Howden_Task__c/listViews/investmentViewbat.listView-meta.xml
<ListView>
    <fullName>investmentViewbat</fullName>
    <columns>NAME</columns>
    <columns>Requested_By__c</columns>
    <columns>Status_details__c</columns>
    <columns>Department__c</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Detailes__c</columns>
    <columns>Request_date__c</columns>
    <columns>Investment__c</columns>
    <columns>Request_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>חדש,בטיפול,לבחינה עתידית,ממתין לישיבת תעדוף</value>
    </filters>
    <label>משימות לתעדוף</label>
    <sharedTo>
        <roleAndSubordinates>DirectorofFinanceandAdministration</roleAndSubordinates>
    </sharedTo>
</ListView>