force-app/main/default/objects/Howden_Task__c/listViews/SF.listView-meta.xml
<ListView>
    <fullName>SF</fullName>
    <columns>Subject__c</columns>
    <columns>NAME</columns>
    <columns>Request_Owner__c</columns>
    <columns>Status_details__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>קרן כהן</value>
    </filters>
    <label>פרויקט שדרוג SF</label>
</ListView>