force-app/main/default/objects/Howden_Task__c/listViews/StatusBetipul.listView-meta.xml
<ListView>
    <fullName>StatusBetipul</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Request_date__c</columns>
    <columns>Status__c</columns>
    <columns>Request_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>בטיפול</value>
    </filters>
    <label>בטיפול</label>
    <language>iw</language>
</ListView>