force-app/main/default/objects/Howden_Task__c/listViews/StatusNew.listView-meta.xml
<ListView>
    <fullName>StatusNew</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>חדש</value>
    </filters>
    <label>חדש</label>
    <language>iw</language>
</ListView>