force-app/main/default/objects/Howden_Task__c/listViews/tasksigal.listView-meta.xml
<ListView>
    <fullName>tasksigal</fullName>
    <columns>NAME</columns>
    <columns>Requested_By__c</columns>
    <columns>Status_details__c</columns>
    <columns>Department__c</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Detailes__c</columns>
    <columns>Investment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Owner__c</field>
        <operation>equals</operation>
        <value>סיגל</value>
    </filters>
    <label>משימות - סיגל</label>
    <language>iw</language>
    <sharedTo>
        <role>DirectorofFinanceandAdministration</role>
        <role>Vice_CEO</role>
    </sharedTo>
</ListView>